--- a/build.gradle
+++ b/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     compile "com.mashape.unirest:unirest-java:1.4.9"
     compile "com.google.code.gson:gson:2.8.5"
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile "org.mockito:mockito-core:2.7.5"
 }
